add_sources(libopenage
	color.cpp
	compiler.cpp
	constinit_vector.cpp
	dir.cpp
	enum.cpp
	enum_test.cpp
	externalprofiler.cpp
	externalsstream.cpp
	file.cpp
	fds.cpp
	fixed_point.cpp
	fixed_point_test.cpp
	fps.cpp
	fslikeobject.cpp
	hash.cpp
	init.cpp
	language.cpp
	matrix.cpp
	matrix_test.cpp
	misc.cpp
	opengl.cpp
	os.cpp
	profiler.cpp
	quaternion.cpp
	quaternion_test.cpp
	repr.cpp
	stringformatter.cpp
	strings.cpp
	subprocess.cpp
	thread_id.cpp
	timer.cpp
	timing.cpp
	unicode.cpp
	vector.cpp
	vector_test.cpp
)

pxdgen(
	compiler.h
	enum.h
	enum_test.h
	fslikeobject.h
)

add_subdirectory(compress)
