add_py_modules(
	__init__.py
	ability_subprocessor.py
	auxiliary_subprocessor.py
	civ_subprocessor.py
	effect_subprocessor.py
	media_subprocessor.py
	modifier_subprocessor.py
	modpack_subprocessor.py
	nyan_subprocessor.py
	pregen_processor.py
	processor.py
	tech_subprocessor.py
	upgrade_ability_subprocessor.py
	upgrade_attribute_subprocessor.py
	upgrade_effect_subprocessor.py
	upgrade_resource_subprocessor.py
)

add_subdirectory(ability)
add_subdirectory(auxiliary)
add_subdirectory(civ)
add_subdirectory(effect)
add_subdirectory(main)
add_subdirectory(media)
add_subdirectory(modifier)
add_subdirectory(modpack)
add_subdirectory(nyan)
add_subdirectory(pregen)
add_subdirectory(resistance)
add_subdirectory(tech)
add_subdirectory(upgrade_ability)
add_subdirectory(upgrade_attribute)
add_subdirectory(upgrade_effect)
add_subdirectory(upgrade_resistance)
