add_py_modules(
	ability_subprocessor.py
	__init__.py
	civ_subprocessor.py
	media_subprocessor.py
	modpack_subprocessor.py
	nyan_subprocessor.py
	processor.py
	tech_subprocessor.py
	upgrade_attribute_subprocessor.py
	upgrade_resource_subprocessor.py
)

add_subdirectory(ability)
add_subdirectory(civ)
add_subdirectory(main)
add_subdirectory(media)
add_subdirectory(nyan)
add_subdirectory(tech)
add_subdirectory(upgrade_attribute)
add_subdirectory(upgrade_resource)
